--- a/templates/user.html
+++ b/templates/user.html
@@ -1,12 +1,22 @@
-<h1> Hello, {{name}}! </h1>
-<h2> Today's top headlines in {{topic}} are... </h2>
+<link rel="stylesheet" type="text/css"
+  href="{{ url_for('static', filename='style.css') }}"/>
+
+<h1> {{ greeting }}, {{ name }}! </h1>
+<h2> Today's top headlines in {{ topic }} are... </h2>
 <ol><h3>
 {% for item in my_list %}
-    <li> <h4> {{item['title']}} ({{item['url']}}) </h4> </li>
+    <li>
+        <h4>
+            {{ item['title'] }}
+            <a href = "{{item['url']}}" target = "_blank"> ({{ item['url'] }}) </a>
+        </h4>
+    </li>
 {% endfor %}
 </h3></ol>
 
 <h3> Other headline pages: </h3>
 {% for page in list_page %}
-    <a href = '{{name}}/{{page}}'> {{page}} </a><br>
+    <p>
+        <a href = '{{ name }}/{{ page }}'> {{ page }} </a>
+    </p>
 {% endfor %}
